--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 /* RESET */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
 }
 
 a {
@@ -15,6 +19,11 @@ img {
 }
 
 /*BASE*/
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font: 400 1rem 'DM Sans', sans-serif;
   color: var(--text-color);
@@ -22,7 +31,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1{
+.title {
   font: 700 1.875rem 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
@@ -31,12 +40,12 @@ h1{
 /*VARIABLES*/
 :root {
   --header-height: 4.5rem;
-  --hue: 250;
+  --hue: 160;
   /*HSL color mode*/
-  --base-color: hsl(var(--hue)36% 57%);
-  --base-color-second: hsl(var(--hue)65% 88%);
-  --base-color-alt: hsl(var(--hue)57% 53%);
-  --title-color: hsl(var(--hue)41% 10%);
+  --base-color: hsl(var(--hue) 36% 57%);
+  --base-color-second: hsl(var(--hue) 65% 88%);
+  --base-color-alt: hsl(var(--hue) 57% 53%);
+  --title-color: hsl(var(--hue) 41% 10%);
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
@@ -60,7 +69,20 @@ h1{
 
 .divider-1 {
   height: 1px;
-  background: linear-gradient(270deg, hsla(var(--hue), 36%, 57%, 1) 0%, hsla(var(--hue), 65%, 88%, 0.34) 100%);
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 36%, 57%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34)
+  );
+}
+
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
+  );
 }
 
 /*LAYOUT*/
@@ -74,11 +96,23 @@ h1{
   gap: 2rem;
 }
 
-.section{
+.section {
   padding: 5rem 0;
 }
 
-#header{
+.section .title {
+  margin-bottom: 1rem;
+}
+
+.section header {
+  margin-bottom: 4rem;
+}
+
+.section header strong {
+  color: var(--base-color);
+}
+
+#header {
   border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem;
   display: flex;
@@ -91,6 +125,25 @@ h1{
   background-color: var(--body-color);
 }
 
+#header.scroll {
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.15);
+}
+
+main {
+  margin-top: calc(var(--header-height) + 2rem);
+}
+
+/*==============LOGO======================*/
+.logo {
+  font: 700 1.31rem 'Poppins', sans-serif;
+  color: var(--title-color);
+}
+
+.logo span {
+  color: var(--base-color);
+}
+
+/*==============NAVIGATION======================*/
 nav {
   height: var(--header-height);
   display: flex;
@@ -99,23 +152,99 @@ nav {
   width: 100%;
 }
 
-.logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
-  color: var(--title-color);
+nav ul li {
+  text-align: center;
 }
 
-.logo span{
-  color:var(--base-color);
+nav ul li a {
+  transition: color 0.3s;
+  position: relative;
 }
 
-main{
-  margin-top: var(--header-height);
+nav ul li a:hover {
+  color: var(--base-color);
 }
 
+nav ul li a::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background-color: var(--base-color);
+
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+
+  transition: width 0.2s;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+nav .menu {
+  visibility: hidden;
+  opacity: 0;
+  top: -20rem;
+  transition: 1.5s;
+}
+
+nav .menu ul {
+  display: none;
+}
+
+/* Mostrar menu */
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+
+  background: var(--body-color);
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: grid;
+  place-content: center;
+}
+
+nav.show .menu ul {
+  display: grid;
+}
+
+nav.show ul.grid {
+  gap: 4rem;
+}
+
+/* Toggle Menu */
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  top: -1.5rem;
+  right: 1.5rem;
+
+  transition: 1.5s;
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+  top: 1.5rem;
+}
 
 /*HOME*/
 
-#home{
+#home {
   overflow: hidden;
 }
 
@@ -128,7 +257,7 @@ main{
 }
 
 #home .image::before {
-  content:'';
+  content: '';
   height: 100%;
   width: 100%;
   background: var(--base-color-second);
@@ -161,4 +290,66 @@ main{
 #home .text p {
   margin-bottom: 2rem;
   max-width: 100%;
+}
+
+/*==============ABOUT======================*/
+#about {
+  background: white;
+}
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+/*============   SERVICES   ===================*/
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 00.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
+  text-align: center;
+}
+
+.card i {
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
 }
