--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* RESET */
+/*====  RESET ============================ */
 * {
   margin: 0;
   padding: 0;
@@ -14,34 +14,17 @@ a {
 }
 
 img {
-  width: 100;
+  width: 100%;
   height: auto;
 }
 
-/*BASE*/
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font: 400 1rem 'DM Sans', sans-serif;
-  color: var(--text-color);
-  background: var(--body-color);
-  -webkit-font-smoothing: antialiased;
-}
-
-.title {
-  font: 700 1.875rem 'Poppins', sans-serif;
-  color: var(--title-color);
-  -webkit-font-smoothing: auto;
-}
-
-/*VARIABLES*/
+/*====  VARIABLES ============================ */
 :root {
   --header-height: 4.5rem;
-  --hue: 160;
-  /*HSL color mode*/
+
+  /* colors */
+  --hue: 159;
+  /* HSL color mode */
   --base-color: hsl(var(--hue) 36% 57%);
   --base-color-second: hsl(var(--hue) 65% 88%);
   --base-color-alt: hsl(var(--hue) 57% 53%);
@@ -49,6 +32,31 @@ body {
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
+
+  /* fonts */
+  --title-font-size: 1.875rem;
+  --subtitle-font-size: 1rem;
+
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
+}
+
+/*===  BASE ============================ */
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font: 400 1rem var(--body-font);
+  color: var(--text-color);
+  background: var(--body-color);
+  -webkit-font-smoothing: antialiased;
+}
+
+.title {
+  font: 700 var(--title-font-size) var(--title-font);
+  color: var(--title-color);
+  -webkit-font-smoothing: auto;
 }
 
 .button {
@@ -59,7 +67,7 @@ body {
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem 'DM Sans', sans-serif;
+  font: 500 1rem var(--body-font);
   transition: background 0.3s;
 }
 
@@ -85,7 +93,7 @@ body {
   );
 }
 
-/*LAYOUT*/
+/*====  LAYOUT ============================ */
 .container {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -97,11 +105,15 @@ body {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title {
   margin-bottom: 1rem;
+}
+
+.section .subtitle {
+  font-size: var(--subtitle-font-size);
 }
 
 .section header {
@@ -117,25 +129,21 @@ body {
   margin-bottom: 2rem;
   display: flex;
 
-  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   background-color: var(--body-color);
+  width: 100%;
 }
 
 #header.scroll {
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 2rem);
-}
-
-/*==============LOGO======================*/
+/*====  LOGO ============================ */
 .logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
   color: var(--title-color);
 }
 
@@ -147,7 +155,7 @@ main {
   color: var(--body-color);
 }
 
-/*==============NAVIGATION======================*/
+/*====  NAVIGATION ============================ */
 nav {
   height: var(--header-height);
   display: flex;
@@ -161,11 +169,12 @@ nav ul li {
 }
 
 nav ul li a {
-  transition: color 0.3s;
+  transition: color 0.2s;
   position: relative;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,
+nav ul li a.active {
   color: var(--base-color);
 }
 
@@ -173,7 +182,7 @@ nav ul li a::after {
   content: '';
   width: 0%;
   height: 2px;
-  background-color: var(--base-color);
+  background: var(--base-color);
 
   position: absolute;
   left: 0;
@@ -182,15 +191,16 @@ nav ul li a::after {
   transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.active::after {
   width: 100%;
 }
 
 nav .menu {
-  visibility: hidden;
   opacity: 0;
+  visibility: hidden;
   top: -20rem;
-  transition: 1.5s;
+  transition: 0.2s;
 }
 
 nav .menu ul {
@@ -203,6 +213,7 @@ nav.show .menu {
   visibility: visible;
 
   background: var(--body-color);
+
   height: 100vh;
   width: 100vw;
 
@@ -222,7 +233,7 @@ nav.show ul.grid {
   gap: 4rem;
 }
 
-/* Toggle Menu */
+/* toggle menu */
 .toggle {
   color: var(--base-color);
   font-size: 1.5rem;
@@ -237,7 +248,7 @@ nav .icon-close {
   top: -1.5rem;
   right: 1.5rem;
 
-  transition: 1.5s;
+  transition: 0.2s;
 }
 
 nav.show div.icon-close {
@@ -246,8 +257,7 @@ nav.show div.icon-close {
   top: 1.5rem;
 }
 
-/*HOME*/
-
+/*====  HOME ============================ */
 #home {
   overflow: hidden;
 }
@@ -293,13 +303,13 @@ nav.show div.icon-close {
 
 #home .text p {
   margin-bottom: 2rem;
-  max-width: 100%;
 }
 
-/*==============ABOUT======================*/
+/*====  ABOUT ============================ */
 #about {
   background: white;
 }
+
 #about .container {
   margin: 0;
 }
@@ -333,7 +343,7 @@ nav.show div.icon-close {
   margin-right: 1.5rem;
 }
 
-/*============   SERVICES   ===================*/
+/*====  SERVICES ============================ */
 .cards.grid {
   gap: 1.5rem;
 }
@@ -341,7 +351,7 @@ nav.show div.icon-close {
 .card {
   padding: 3.625rem 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
-  border-bottom: 00.25rem solid var(--base-color);
+  border-bottom: 0.25rem solid var(--base-color);
   border-radius: 0.25rem 0.25rem 0 0;
   text-align: center;
 }
@@ -358,8 +368,7 @@ nav.show div.icon-close {
   margin-bottom: 0.75rem;
 }
 
-/*============   TESTIMONIALS   ===================*/
-
+/*====  TESTIMONIALS ============================ */
 #testimonials {
   background: white;
 }
@@ -370,9 +379,9 @@ nav.show div.icon-close {
 }
 
 #testimonials header {
-  margin-bottom: 0;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+  margin-bottom: 0;
 }
 
 #testimonials blockquote {
@@ -416,11 +425,16 @@ nav.show div.icon-close {
   padding: 4rem 1rem;
 }
 
+.swiper-pagination-bullet {
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
 .swiper-pagination-bullet-active {
   background: var(--base-color);
 }
 
-/*============   CONTACT   ===================*/
+/*====  CONTACT ============================ */
 #contact .grid {
   gap: 4rem;
 }
@@ -448,9 +462,13 @@ nav.show div.icon-close {
   color: var(--base-color);
 }
 
-/*============   FOOTER   ===================*/
+/*====  FOOTER ============================ */
 footer {
   background: var(--base-color);
+}
+
+footer.section {
+  padding: 4rem 0;
 }
 
 footer .logo {
@@ -459,8 +477,8 @@ footer .logo {
 }
 
 footer .brand p {
-  margin-bottom: 0.75rem;
   color: var(--text-color-light);
+  margin-bottom: 0.75rem;
 }
 
 footer i {
@@ -468,8 +486,12 @@ footer i {
   color: var(--text-color-light);
 }
 
+footer .social {
+  grid-auto-flow: column;
+  width: fit-content;
+}
+
 footer .social a {
-  margin-right: 2rem;
   transition: 0.3s;
   display: inline-block;
 }
@@ -478,15 +500,18 @@ footer .social a:hover {
   transform: translateY(-8px);
 }
 
-/*============   BACK-TO-TOP   ===================*/
+/* Back to top */
 .back-to-top {
   background: var(--base-color);
   color: var(--text-color-light);
+
   position: fixed;
   right: 1rem;
   bottom: 1rem;
+
   padding: 0.5rem;
   clip-path: circle();
+
   font-size: 1.5rem;
   line-height: 0;
 
@@ -494,15 +519,142 @@ footer .social a:hover {
   opacity: 0;
 
   transition: 0.3s;
-  transform: translateX(150%);
+  transform: translateY(100%);
 }
 
 .back-to-top.show {
   visibility: visible;
   opacity: 1;
-  transform: translateX(0%);
+  transform: translateY(0);
 }
 
-/* Responsivo */
-@media (min-width: 992px) {
+/*========= MEDIA QUERIES =========*/
+/* extra large devices: 1200 > */
+@media (min-width: 1200px) {
+  /* reusable classes */
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section {
+    padding: 10rem 0;
+  }
+
+  .section header,
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .button {
+    height: 3.125rem;
+  }
+
+  /* navigation */
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1rem var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.title.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
+  }
+
+  nav .icon-menu {
+    display: none;
+  }
+
+  /* layout */
+  main {
+    margin-top: var(--header-height);
+  }
+
+  /* home */
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  #home .image {
+    order: 1;
+  }
+
+  #home .text {
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+  }
+
+  /* about */
+  #about .container {
+    margin: 0 auto;
+    grid-auto-flow: column;
+  }
+
+  /* services */
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  /* testimonials */
+  #testimonials .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* contact */
+  #contact .container {
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  #contact .text {
+    max-width: 25rem;
+  }
+
+  /* footer */
+  footer.section {
+    padding: 3.75rem 0;
+  }
+
+  footer .container {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo {
+    font-size: 2.25rem;
+  }
 }
+/* large devices: 1023 > */
+/* large devices: 992 > */
+@media (min-width: 992px) {
+  :root {
+    --title-font-size: 2.25rem;
+    --subtitle-font-size: 1.125rem;
+  }
+}
+/* medium devices: 767 > */
